# lvgl-msg-bus

./: .gitignore  CMakeLists.txt  README.md  README_zh.md  idf_component.yml
.github/workflows/: ci.yml  idf-component.yml
examples/basic/: CMakeLists.txt
examples/basic/main/: CMakeLists.txt  idf_component.yml  main.cc
include/lvgl_msg_bus/: data_store.h  message_bus.h  subscription.h
src/: data_store.cc  message_bus.cc  subscription.cc
